<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/target_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/target_image" />


    <TextView
        android:id="@+id/target_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/target_image"/>

    <Button
        android:id="@+id/btn_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:id="@+id/btn_bounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bounce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:id="@+id/btn_fade_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fade_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_bounce"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:id="@+id/btn_fade_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fade_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_rotate"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:id="@+id/btn_zoom_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_fade_out"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:id="@+id/btn_zoom_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_fade_in"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:id="@+id/btn_slide_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_zoom_out"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:id="@+id/btn_slide_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_zoom_in"
        android:layout_marginBottom="30dp"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/my_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="With xml"
        android:checked="true"
        app:layout_constraintBottom_toTopOf="@id/btn_slide_in"
        />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/view_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView/ImageVeiw"
        android:checked="true"
        app:layout_constraintBottom_toTopOf="@id/my_switch"
        />
    <ImageButton
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_settings_backup_restore_24"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>